[package]
name = "waylock"
version = "0.1.0"
edition = "2021"

[dependencies]
pam = { package = "pam-f", version = "0.8.1", default-features = false, features = [
	"client",
] }
iced = { version = "0.13", default-features = false, features = [
	"advanced",
	"image",
] }
iced_sessionlock = { version = "0.11.0-rc5", default-features = false }
uzers = "0.12.1"
chrono = "0.4.38"
